<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/SalmonPrefCat" >

		<Preference
            android:key="vaultLocation"
            android:summary="@string/VaultLocationSummary"
            android:title="@string/VaultLocationTitle" />

		<Preference
            android:key="changePassword"
            android:summary="@string/ChangePasswordSummary"
            android:title="@string/ChangePasswordTitle" />


		<CheckBoxPreference
            android:key="deleteAfterImport"
            android:summary="@string/DeleteSourceFilesAfterImport"
            android:title="@string/DeleteFilesAfterImport" />

		<CheckBoxPreference
            android:key="enableLog"
            android:summary="@string/EnableLog"
            android:title="@string/EnableLog" />

		<CheckBoxPreference
        android:key="enableLogDetails"
        android:summary="@string/EnableLogDetails"
        android:title="@string/EnableLogDetails" />

		<CheckBoxPreference
            android:key="excludeFromRecents"
            android:summary="@string/ExcludeFromRecents"
            android:title="@string/ExcludeFromRecents" />
	</PreferenceCategory>
</PreferenceScreen>